--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,7 +6,7 @@
 
 body {
     background: url("{{ site.baseurl }}/assets/img/j.png") no-repeat center center fixed !important;
-    background-size: cover !important;
+//     background-size: cover !important;
 }
 
 .entry-date {
