--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,8 +5,10 @@
 @import "minima";
 
 body {
+    // background: url("{{ site.baseurl }}/assets/img/j.png") no-repeat center center fixed !important;
+    // background-size: cover !important;
     background: url("{{ site.baseurl }}/assets/img/j.png") no-repeat center center fixed !important;
-    background-size: cover !important;
+    background-size: auto !important;
 }
 
 .entry-date {
