--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,6 +14,8 @@ body {
     // filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{ site.baseurl }}/assets/img/j.png', sizingMethod='scale');
     // -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{ site.baseurl }}/assets/img/j.png', sizingMethod='scale')";
     background-size: cover;
+    height: 100%;
+    // overflow: hidden;
 }
 
 .entry-date {
