--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,7 +13,7 @@ body {
     -o-background-size: cover;
     // filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{ site.baseurl }}/assets/img/j.png', sizingMethod='scale');
     // -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{ site.baseurl }}/assets/img/j.png', sizingMethod='scale')";
-    background-size: cover !important;
+    background-size: cover;
     height: 100%;
 }
 
